--- a/08-image-grid-layout/styles.css
+++ b/08-image-grid-layout/styles.css
@@ -29,6 +29,45 @@
     grid-row: 1 / span 2;
 }
 
+.img4 {
+    grid-area: 3 / 1 / 4 / 2;
+}
+
 .img5 {
     grid-row: 2 / span 2;
+}
+
+.img6 {
+    grid-area: 3 / 3 / 4 / 4;
+}
+
+/* Mobile */
+@media screen and (max-width: 600px) {
+    .container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    
+    .img1 {
+        grid-area: 1 / 1 / 3 / 2;
+    }
+
+    .img2 {
+        grid-area: 1 / 2 / 2 / 3;
+    }
+
+    .img3 {
+        grid-area: 2 / 2 / 4 / 3;
+    }
+
+    .img4 {
+        grid-area: 3 / 1 / 4 / 2;
+    }
+
+    .img5 {
+        grid-area: 4 / 1 / 5 / 2;
+    }
+
+    .img6 {
+        grid-area: 4 / 2 / 5 / 3;
+    }
 }
